--- a/src/FormationBundle/Resources/config/doctrine/Eleve.orm.yml
+++ b/src/FormationBundle/Resources/config/doctrine/Eleve.orm.yml
@@ -30,7 +30,12 @@ FormationBundle\Entity\Eleve:
             length: 255
         datenaissance:
             type: date
-    lifecycleCallbacks: {  }
+    lifecycleCallbacks:
+      prePersist: [ preUpload, setCreatedAtValue, setExpiresAtValue ]
+      preUpdate: [ preUpload, setUpdatedAtValue ]
+      postPersist: [ upload ]
+      postUpdate: [ upload ]
+      postRemove: [ removeUpload ]
 
     manyToMany:
         promotion:
