--- a/src/FormationBundle/Resources/config/validation.yml
+++ b/src/FormationBundle/Resources/config/validation.yml
@@ -3,3 +3,9 @@ FormationBundle\Entity\Promotion:
         # ...
         file:
             - Image: ~
+
+FormationBundle\Entity\Eleve:
+    properties:
+        # ...
+        file:
+            - Image: ~
