--- a/src/FormationBundle/Resources/config/routing.yml
+++ b/src/FormationBundle/Resources/config/routing.yml
@@ -30,6 +30,10 @@ formation_commentaire:
     resource: "@FormationBundle/Resources/config/routing/commentaire.yml"
     prefix:   /commentaire
 
+formation_eleveprom:
+    resource: "@FormationBundle/Resources/config/routing/eleve.yml"
+    prefix:   /eleve
+
 
 
 formation_homepage:
