--- a/src/FormationBundle/Resources/config/validation.yml
+++ b/src/FormationBundle/Resources/config/validation.yml
@@ -9,3 +9,11 @@ FormationBundle\Entity\Eleve:
         # ...
         file:
             - Image: ~
+
+FormationBundle\Entity\Eleve:
+    properties:
+        cv:
+            - File:
+                maxSize: 1024k
+                mimeTypes: [application/pdf, application/x-pdf]
+mimeTypesMessage: Please upload a valid PDF
