note module bilan

--- a/src/FormationBundle/Resources/config/doctrine/Note.orm.yml
+++ b/src/FormationBundle/Resources/config/doctrine/Note.orm.yml
@@ -19,3 +19,5 @@ FormationBundle\Entity\Note:
             targetEntity: FormationBundle\Entity\Promotion
         eleve:
             targetEntity: FormationBundle\Entity\Eleve
+        module:
+            targetEntity: FormationBundle\Entity\Module
