--- a/src/FormationBundle/Resources/config/doctrine/Commentaire.orm.yml
+++ b/src/FormationBundle/Resources/config/doctrine/Commentaire.orm.yml
@@ -13,3 +13,9 @@ FormationBundle\Entity\Commentaire:
             type: string
             length: 255
     lifecycleCallbacks: {  }
+
+    manyToMany:
+        note:
+            targetEntity: FormationBundle\Entity\Note
+            mappedBy: commentaire
+
