--- a/src/FormationBundle/Resources/config/doctrine/Note.orm.yml
+++ b/src/FormationBundle/Resources/config/doctrine/Note.orm.yml
@@ -21,3 +21,15 @@ FormationBundle\Entity\Note:
             targetEntity: FormationBundle\Entity\Eleve
         module:
             targetEntity: FormationBundle\Entity\Module
+
+    manyToMany:
+        commentaire:
+            targetEntity: FormationBundle\Entity\Commentaire
+            inversedBy: note
+            joinTable:
+                name: notecom
+                joinColumns:
+                    note_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    commentaire_id:
