--- a/src/FormationBundle/Resources/config/doctrine/Commentaire.orm.yml
+++ b/src/FormationBundle/Resources/config/doctrine/Commentaire.orm.yml
@@ -12,6 +12,7 @@ FormationBundle\Entity\Commentaire:
         message:
             type: string
             length: 255
+            nullable: true
     lifecycleCallbacks: {  }
 
     manyToMany:
