--- a/src/FormationBundle/Resources/config/doctrine/Commentaire.orm.yml
+++ b/src/FormationBundle/Resources/config/doctrine/Commentaire.orm.yml
@@ -16,7 +16,27 @@ FormationBundle\Entity\Commentaire:
     lifecycleCallbacks: {  }
 
     manyToMany:
-        note:
-            targetEntity: FormationBundle\Entity\Note
-            mappedBy: commentaire
+        eleve:
+            targetEntity: FormationBundle\Entity\Eleve
+            inversedBy: commentaire
+            joinTable:
+                name: com_elev
+                joinColumns:
+                    commentaire_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    eleve_id:
+                        referencedColumnName: id
+
+        promotion:
+            targetEntity: FormationBundle\Entity\Promotion
+            inversedBy: commentaire
+            joinTable:
+                name: com_promo
+                joinColumns:
+                    commentaire_id:
+                        referencedColumnName: id
+                inverseJoinColumns:
+                    promotion_id:
+                        referencedColumnName: id
 
